# calendar_agent

./: .gitignore  main.py  pyproject.toml  token.json.bak
config/: model_params.yaml  prompts.yaml
src/: agents.py  chat_agent.py  prompts.py  tools.py
src/config/: config.py
